Add mongo connector, setup an occurance_habit api with a db model

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -34,5 +34,9 @@
   "Role": {
     "dataSource": "db",
     "public": false
+  },
+  "occurrence_habit": {
+    "dataSource": "db",
+    "public": true
   }
 }
