--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "server/server.js",
   "engines": {
-    "node": ">=4"
+    "node": "6.9.5",
+    "npm": ">= 5"
   },
   "scripts": {
     "lint": "eslint .",
