--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,8 +15,8 @@
     "react-scripts": "1.0.14"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build && cp -r build/* ../client/",
+    "start": "cross-env REACT_APP_API_ENPOINT=http://localhost:3001 react-scripts start",
+    "build": "cross-env REACT_APP_API_ENPOINT='' react-scripts build && rm -rf ../client/* && cp -r build/* ../client/",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
