--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,13 @@
 {
-  "extends": "loopback"
+  "extends": "airbnb",
+  "plugins": [
+      "react",
+      "jsx-a11y",
+      "import"
+  ],
+  "rules": {
+      "react/jsx-filename-extension": 0,
+      "max-len": 0,
+      "jsx-a11y/anchor-has-content": 0
+  }
 }
