--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,13 @@
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
+    "cross-env": "^5.1.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-google": "^0.7.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
     "react-scripts": "1.0.14"
   },
   "scripts": {
