--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,10 @@
   "rules": {
       "react/jsx-filename-extension": 0,
       "max-len": 0,
-      "jsx-a11y/anchor-has-content": 0
+      "jsx-a11y/anchor-has-content": 0,
+      "jsx-a11y/anchor-is-valid": 0
+  },
+  "globals": {
+      "fetch": false
   }
 }
