--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^16.2.0",
     "react-google-charts": "^1.5.5",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "react-sidebar": "^2.3.2"
   },
   "devDependencies": {
     "cross-env": "^5.1.3",
